add tweaks to adjust mobile footer nav

--- a/css/bcdevexchange-theme.css
+++ b/css/bcdevexchange-theme.css
@@ -38,7 +38,7 @@
   /*background: purple;*/
 }
 .bcde-l-homepage__side {
-
+  color: #999;
   padding-top: 30px;
   text-align: right;
   /*background: aqua;*/
@@ -46,7 +46,7 @@
 
 .bcde-l-homepage__content {
   border-bottom: 1px dotted #555;
-  margin-bottom:5px;
+  padding-bottom: 20px;
   /*background: yellow;*/
 }
 
@@ -55,13 +55,32 @@
     display: none;
   }
 }
+/*
+.bcde-footer .col-md-1 {
+  background: pink;
+  text-align: right;
+}
+.bcde-footer .bcde-footer__logo {
+  /*display: block;*/
+  text-align: right;
 
+}*/
 
 .bcde-footer__navigation {
   float:left;
 }
 
-.bcde-footer__logo {
-  display: block;
-  float: right;
+@media (max-width: 991px) {
+  .bcde-footer__logo-container{
+    text-align: center;
+  }
+
+  .bcde-footer__navigation{
+    text-align: center;
+  }
+  .bcde-footer ul {
+    display: inline-block;
+    text-align: left;
+  }
+
 }
