--- a/css/bcdevexchange-theme.css
+++ b/css/bcdevexchange-theme.css
@@ -1,41 +1,19 @@
 
 
-.bcde-l-homepage__side {
-
-}
-
 .bcde-header {
-  border-bottom: 1px dotted #555;
-  margin-bottom:25px;
-  margin-top:5px;
   padding-bottom: 20px;
-  /*background: pink;*/
-}
-
-.bcde-header__logo{
-  display: block;
-  float: left;
-  /*background: yellow;*/
-
+  background: pink;
 }
 
 
-.bcde-header__navigation {
-  float: right;
-  /*background: orange;*/
-}
 
-@media (max-width: 991px) {
-  .bcde-header__logo, .bcde-header__navigation{
-    float: none;
-  }
-}
+
 
 .bcde-l-homepage__section {
 
   padding-bottom: 25px;
   margin-top: 5px;
-  /*background: purple;*/
+  background: purple;
 }
 .bcde-l-homepage__side {
   color: #999;
